<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/ThemeColor"
            android:textAllCaps="true"
            android:text="@string/one_introduce_cash_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/discount"
            android:textAllCaps="true"
            android:text="@string/one_paid_to_shop_online"
            />
        <ImageButton
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@mipmap/offer_phone"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/ThemeColor"
                android:textAllCaps="true"
                android:text="@string/one_earn_cash_back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/discount"
                android:text="@string/one_from"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/ThemeColor"
                android:textAllCaps="true"
                android:text="@string/one_addley"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/discount"
            android:text="@string/one_over_above"
            />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
