<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <ProgressBar
        android:id="@+id/bank_account_progress"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/bank_account_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:text="@string/user_dashboard_welcome"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/user_dashboard_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/ThemeColor"
                    android:text="@string/user_dashboard_user_name"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_dashboard_message"
                    android:padding="5dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_dashboard_new_to_cashback"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:id="@+id/user_dashboard_how_to_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/ThemeColor"
                        android:text="@string/user_dashboard_how_to_work"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/user_dashboard_total_sale"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textSize="8dp"
                    android:textColor="@color/white"
                    android:background="@drawable/oval"
                    android:text="@string/user_dashboard_total_sale_message_full"
                    />
                <Button
                    android:id="@+id/user_dashboard_total_commission"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="9dp"
                    android:background="@drawable/oval"
                    android:text="@string/user_dashboard_total_commission_message_full"
                    android:enabled="false" />
                <Button
                    android:id="@+id/user_dashboard_total_downline_member"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="9dp"
                    android:background="@drawable/oval"
                    android:text="@string/user_dashboard_total_downline_member_message_full" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
